--- a/config/tourism/templates/tourism/index.xhtml
+++ b/config/tourism/templates/tourism/index.xhtml
@@ -24,8 +24,8 @@
             <section>
                 <h3>Welcome to Incredible !ndia</h3>
                 <h1>Witness the Wonders<span></span></h1>
-                <a href="bystate.xhtml" class="btnone">Explore</a>
-                <a href="AboutUs.xhtml" class="btntwo">Learn More</a>
+                <a href="/bystate/" class="btnone">Explore</a>
+                <a href="/about/" class="btntwo">Learn More</a>
             </section>
         </main>
     </header>
@@ -52,10 +52,10 @@
             <div class="footer-col">
                 <h4>Indian Tourism</h4>
                 <ul>
-                    <li><a href="index.xhtml">Home</a></li>
-                    <li><a href="AboutUs.xhtml">About</a></li>
-                    <li><a href="Popular.xhtml">Popular</a></li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about/">About</a></li>
+                    <li><a href="/popular/">Popular</a></li>
+                    <li><a href="/popular/">Contact</a></li>
                             </ul>
                     </div>
 
